crates/perl-lsp-diagnostics/tests/snapshots/unreachable_code_snapshot_tests__continue_block_confess_followed_by_statement.snap
---
source: crates/perl-lsp-diagnostics/tests/unreachable_code_snapshot_tests.rs
expression: snapshot
---
PL406 | Hint | (40, 45) | Unreachable code: this statement cannot be executed
