crates/perl-lsp-diagnostics/tests/snapshots/unreachable_code_snapshot_tests__foreach_loop_with_continue_block.snap
---
source: crates/perl-lsp-diagnostics/tests/unreachable_code_snapshot_tests.rs
expression: snapshot
---
PL406 | Hint | (47, 52) | Unreachable code: this statement cannot be executed
