crates/perl-lsp-diagnostics/tests/snapshots/unreachable_code_snapshot_tests__loop_body_unreachable_unchanged.snap
---
source: crates/perl-lsp-diagnostics/tests/unreachable_code_snapshot_tests.rs
expression: snapshot
---
PL406 | Hint | (23, 28) | Unreachable code: this statement cannot be executed
