crates/perl-lsp-diagnostics/tests/snapshots/unreachable_code_snapshot_tests__no_unreachable_code.snap
---
source: crates/perl-lsp-diagnostics/tests/unreachable_code_snapshot_tests.rs
expression: snapshot
---

